--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>They Don't Call Them Oversmalls</title>
+    <title>They Don't Call Them Over-smalls</title>
     <link rel="stylesheet" href="main.css">
 </head>
 <body>
