--- a/categories.html
+++ b/categories.html
@@ -34,7 +34,7 @@
       </div>
     </nav>
     <!-- navbar end -->
-    <h1>Overalls</h1>
+    <h1 id="site-title">Overalls</h1>
     <div id="childCards"></div>
     <script src="main.js"></script>
 </body>
