--- a/contact.html
+++ b/contact.html
@@ -34,7 +34,7 @@
     </div>
   </nav>
   <!-- navbar end -->
-    <h1>Cattywampus</h1>
+    <h1 id="site-title">Cattywampus</h1>
 
     <script src="main.js"></script>
 </body>
