--- a/categories.html
+++ b/categories.html
@@ -26,7 +26,7 @@
             <a class="nav-link" href="./categories.html">ADULTS</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="./categories.html">KIDS</a>
+            <a class="nav-link" id="Child" href="./categories.html">KIDS</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="./contact.html">CONTACT</a>
@@ -34,7 +34,6 @@
       </div>
     </nav>
     <!-- navbar end -->
-    <h1>Overalls</h1>
     <div id="childCards"></div>
     <script src="main.js"></script>
 </body>
