--- a/children.html
+++ b/children.html
@@ -23,10 +23,10 @@
             <a class="nav-link" href="./about.html">ABOUT</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="./categories.html">ADULTS</a>
+            <a class="nav-link" href="./index.html">ADULTS</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" id="Child" href="./categories.html">KIDS</a>
+            <a class="nav-link" id="Child" href="./children.html">KIDS</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="./contact.html">CONTACT</a>
@@ -34,8 +34,11 @@
       </div>
     </nav>
     <!-- navbar end -->
-    <h1 id="site-title">Overalls</h1>
+    <h1 id="site-title">Children</h1>
     <div id="childCards" class="kidsStyle"></div>
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
     <script src="main.js"></script>
 </body>
 </html>
