added divs for category links and featured items

--- a/index.html
+++ b/index.html
@@ -34,8 +34,19 @@
     </div>
   </nav>
   <!-- navbar end -->
-    <h1 id="site-title">Cattywampus</h1>
+  <p id="covid-banner">COVID-19 Advisory: Business operations may be affected. Due to ongoing precautionary measures please call us for product availability.</p>
 
+  <h1 id="site-title" class="path">Cattywampus</h1>
+
+  <div id="categories">
+
+  </div>
+
+  <div id="featured-items">
+
+  </div>
+
+  <div id="footer"></div>
     <script src="main.js"></script>
 </body>
 </html>
