fixed buildCards functions, added id to h1 on adults page.

--- a/adults.html
+++ b/adults.html
@@ -17,7 +17,7 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item active">
-            <a class="nav-link" href="./index.html">ABOUT <span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="./index.html">HOME <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="./about.html">ABOUT</a>
@@ -26,7 +26,7 @@
             <a class="nav-link" href="./adults.html">ADULTS</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="./categories.html">KIDS</a>
+            <a class="nav-link" href="./children.html">KIDS</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="./contact.html">CONTACT</a>
@@ -34,9 +34,9 @@
       </div>
     </nav>
     <!-- navbar end -->
-    <h1>Overalls</h1>
+    <h1 id="site-title">Overalls</h1>
 
-    <div id="adultCards" class="container"></div>
+    <div id="adultCards" class="kidsStyle"></div>
     <script src="main.js"></script>
 </body>
 </html>
