--- a/children.html
+++ b/children.html
@@ -17,16 +17,16 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item active">
-            <a class="nav-link" href="./index.html">ABOUT <span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="./index.html">HOME <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="./about.html">ABOUT</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="./index.html">ADULTS</a>
+            <a class="nav-link" href="./adults.html">ADULTS</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" id="Child" href="./children.html">KIDS</a>
+            <a class="nav-link" href="./children.html">KIDS</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="./contact.html">CONTACT</a>
