--- a/index.html
+++ b/index.html
@@ -36,23 +36,30 @@
   <!-- navbar end -->
   <p id="covid-banner">COVID-19 Advisory: Business operations may be affected. Due to ongoing precautionary measures please call us for product availability.</p>
 
-<<<<<<< HEAD
-  <h1 id="site-title" class="path">Cattywampus</h1>
+  <h1 id="site-title">Cattywampus</h1>
 
   <div id="categories">
-
+      <div id="adult-link">
+        <a href="adults.html">
+          <p>adults</p>
+        </a>
+      </div>
+    
+      <div id="kids-link">
+        <a href="children.html">
+          <p>kids</p>
+        </a>
+      </div>
   </div>
 
-  <div id="featured-items">
-
-  </div>
+  <h2 class="subheading">today's featured items</h2>
+  <div id="featured-items" class="carousel slide" data-ride="carousel"></div>
 
   <div id="footer"></div>
-=======
+
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
->>>>>>> master
     <script src="main.js"></script>
 </body>
 </html>
