about page with basic styling

--- a/about.html
+++ b/about.html
@@ -35,10 +35,15 @@
   </nav>
   <!-- navbar end -->
     <h1 id="site-title">Cattywampus</h1>
-
+    <div class="about">
+    <img src="https://ae01.alicdn.com/kf/HTB1YhRgXffsK1RjSszgq6yXzpXao/Mother-and-Daughter-Clothes-Autumn-Clothing-Mother-Daughter-Shirt-jeans-Family-Clothes-Overalls-Mommy-and-Me.jpg_640x640.jpg">
+    
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ultricies integer quis auctor elit sed. Cursus vitae congue mauris rhoncus aenean vel elit. Vitae elementum curabitur vitae nunc sed velit dignissim. At urna condimentum mattis pellentesque id nibh tortor id. Turpis in eu mi bibendum. Velit laoreet id donec ultrices tincidunt arcu non sodales. Id aliquet lectus proin nibh nisl condimentum id venenatis a. Sollicitudin aliquam ultrices sagittis orci a. Pharetra vel turpis nunc eget. Nec feugiat nisl pretium fusce id velit ut tortor pretium. Vulputate enim nulla aliquet porttitor. Non diam phasellus vestibulum lorem sed risus. Sapien faucibus et molestie ac. Quis eleifend quam adipiscing vitae proin sagittis. Nibh venenatis cras sed felis eget velit aliquet sagittis. Nunc sed blandit libero volutpat sed cras ornare. Est lorem ipsum dolor sit. Porttitor eget dolor morbi non arcu risus quis varius. Mauris rhoncus aenean vel elit scelerisque mauris pellentesque pulvinar.</p>
+    </div>
+    
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>  
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
     <script src="main.js"></script>
 </body>
 </html>
