working on footer

--- a/index.html
+++ b/index.html
@@ -55,7 +55,21 @@
   <h2 class="subheading">today's featured items</h2>
   <div id="featured-items" class="carousel slide" data-ride="carousel"></div>
 
-  <div id="footer"></div>
+  <div id="footer">
+    <ul id="footer-links">
+      <li><a href="index.html">Home</a></li>
+      <li><a href="#">Store Locator</a>
+      <li><a href="#">Shipping and Returns</a>
+      <li><a href="about.html">About Us</a>
+      <li><a href="#">FAQ</a>
+    </ul>
+    <ul id="footer-CCs">
+      <li></li>
+    </ul>
+    <ul id="footer-media-links">
+
+    </ul>
+  </div>
 
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
