more footer work

--- a/index.html
+++ b/index.html
@@ -64,7 +64,8 @@
       <li><a href="#">FAQ</a>
     </ul>
     <ul id="footer-CCs">
-      <li></li>
+      <li><img src="https://www.vectorlogo.zone/logos/venmo/venmo-icon.svg" alt="Venmo Logo"></li>
+      <li><img src="" alt=""></li>
     </ul>
     <ul id="footer-media-links">
 
