--- a/adults.html
+++ b/adults.html
@@ -36,6 +36,21 @@
     </nav>
     <!-- navbar end -->
     <h1 id="site-title">Overalls</h1>
+    <!-- dropdown filter -->
+    <div class="cardContainer">
+      <div>
+        <div class="dropdown">
+         <button class="btn btn-outline-dark dropdown-toggle filter  " type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+           Sort
+         </button>
+         <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuButton">
+           <a class="dropdown-item" href="#" id="lowHigh">Price: Low - High</a>
+           <a class="dropdown-item" href="#" id="highLow">Price: High - Low</a>
+         </div>
+       </div>
+     </div>
+  
+    <!-- dropdown filter end -->
     <div class="cardContainer">
       <div id="adultCards" class="kidsStyle"></div>
     </div>
