--- a/children.html
+++ b/children.html
@@ -35,8 +35,24 @@
       </div>
     </nav>
     <!-- navbar end -->
+   
     <h1 id="site-title">Children</h1>
-    <div class="cardContainer">
+     <!-- dropdown filter -->
+     <div class="cardContainer">
+      <div>
+        <div class="dropdown">
+         <button class="btn btn-outline-dark dropdown-toggle filter  " type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+           Sort
+         </button>
+         <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuButton">
+           <a class="dropdown-item" href="#" id="lowHigh">Price: Low - High</a>
+           <a class="dropdown-item" href="#" id="highLow">Price: High - Low</a>
+         </div>
+       </div>
+     </div>
+  
+    <!-- dropdown filter end -->
+   
       <div id="childCards" class="kidsStyle"></div>
     </div>
     <!-- Review form -->
