--- a/contact.html
+++ b/contact.html
@@ -4,10 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>They Don't Call Them Over-smalls</title>
-    <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
-  <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
-  <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script> 
-  <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+    <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
+    <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
+    <link rel="stylesheet" href="main.css">
 </head>
 <body>
   <!-- navbar -->
@@ -43,7 +45,7 @@
     <li><strong>Store Hours:</strong> 8am-5pm</li>
     <li><strong>Email:</strong> customerservice@company.com</li></ul>
   </div>
-  <ul class="top-social-icons">
+  <ul class="contact-social-icons">
     <li>
       <a href="https://twitter.com/nwalpine" title="Twitter - NW Alpine">
         <svg aria-hidden="true" focusable="false" role="presentation" class="icon icon-social-twitter" viewBox="0 0 512 512"><path d="M459.37 151.716c.325 4.548.325 9.097.325 13.645 0 138.72-105.583 298.558-298.558 298.558-59.452 0-114.68-17.219-161.137-47.106 8.447.974 16.568 1.299 25.34 1.299 49.055 0 94.213-16.568 130.274-44.832-46.132-.975-84.792-31.188-98.112-72.772 6.498.974 12.995 1.624 19.818 1.624 9.421 0 18.843-1.3 27.614-3.573-48.081-9.747-84.143-51.98-84.143-102.985v-1.299c13.969 7.797 30.214 12.67 47.431 13.319-28.264-18.843-46.781-51.005-46.781-87.391 0-19.492 5.197-37.36 14.294-52.954 51.655 63.675 129.3 105.258 216.365 109.807-1.624-7.797-2.599-15.918-2.599-24.04 0-57.828 46.782-104.934 104.934-104.934 30.213 0 57.502 12.67 76.67 33.137 23.715-4.548 46.456-13.32 66.599-25.34-7.798 24.366-24.366 44.833-46.132 57.827 21.117-2.273 41.584-8.122 60.426-16.243-14.292 20.791-32.161 39.308-52.628 54.253z"></path></svg>
@@ -65,53 +67,44 @@
       </a>
     </li>
   </ul>
+
   <!-- contact form begin -->
-    <div class="container contact">
-      <div class="row">
-        <div class="col-md-3">
-          <div class="contact-info">
-            <img src="https://image.ibb.co/kUASdV/contact-image.png" alt="image"/>
-            <h2>Contact Us</h2>
-            <h4>We would love to hear from you !</h4>
-          </div>
+  <section id="contact">
+    <div class="container">
+      <div class="well well-sm">
+        <h3><strong>Contact Us</strong></h3>
+      </div>
+    
+    <div class="row">
+      <div class="col-md-7">
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3222.595577343952!2d-86.72819048447107!3d36.1277093800926!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88646f4938bd8329%3A0xdc22254d572eccb5!2sNashville%20Software%20School!5e0!3m2!1sen!2sus!4v1588897207634!5m2!1sen!2sus" width="400" height="300" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
         </div>
-        <div class="col-md-9">
-          <div class="contact-form">
+  
+        <div class="col-md-5">
+            <h4><strong>Contact Cattywampus</strong></h4>
+          <form>
             <div class="form-group">
-              <label class="control-label col-sm-2" for="fname">First Name:</label>
-              <div class="col-sm-10">          
-              <input type="text" class="form-control" id="fname" placeholder="Enter First Name" name="fname">
-              </div>
-            </div>
-            <div class="form-group">
-              <label class="control-label col-sm-2" for="lname">Last Name:</label>
-              <div class="col-sm-10">          
-              <input type="text" class="form-control" id="lname" placeholder="Enter Last Name" name="lname">
-              </div>
+              <input type="text" class="form-control" id="cname" name="" value="" placeholder="Name" required>
             </div>
             <div class="form-group">
-              <label class="control-label col-sm-2" for="email">Email:</label>
-              <div class="col-sm-10">
-              <input type="email" class="form-control" id="email" placeholder="Enter email" name="email">
-              </div>
+              <input type="email" class="form-control" id="email" name="" value="" placeholder="E-mail" required>
             </div>
             <div class="form-group">
-              <label class="control-label col-sm-2" for="comment">Comment:</label>
-              <div class="col-sm-10">
-              <textarea class="form-control" rows="5" id="comment"></textarea>
-              </div>
+              <input type="tel" class="form-control" id="onumber" name="" value="" placeholder="Order Number" required>
             </div>
-            <div class="form-group">        
-              <div class="col-sm-offset-2 col-sm-10">
-              <button type="submit" class="btn btn-default">Submit</button>
-              </div>
+            <div class="form-group">
+              <textarea class="form-control" id="message" name="" rows="3" placeholder="Message" required></textarea>
             </div>
-          </div>
+            <button class="btn btn-default" type="submit" name="button">
+                <i class="fa fa-paper-plane-o" aria-hidden="true"></i> Submit
+            </button>
+          </form>
         </div>
       </div>
     </div>
+  </section>
     <!--Contact Form End-->
-    
+  
     <!-- Begin Footer -->
   <div id="footer">
     <ul class="footer-links">
